--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iframe Embed</title>
+    <title>let's taco bout it</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
+
+        iframe {
+            width: 100%;
+            height: 100vh; /* 100% of the viewport height */
+            border: none;
+        }
+    </style>
 </head>
 <body>
-    <h1>Embed Iframe Example</h1>
-    <iframe src="https://gamma.app/embed/6g4j23wmg2jaqck" style="width: 700px; max-width: 100%; height: 450px" allow="fullscreen" title="zony_mexico"></iframe>
+    <iframe src="https://gamma.app/embed/6g4j23wmg2jaqck" allow="fullscreen" title="zony_mexico"></iframe>
 </body>
 </html>
